--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,8 @@
         "ramsey/uuid": "3.5.2",
         "setasign/fpdf": "1.8.1",
         "setasign/fpdi": "1.6.1",
-        "ocramius/proxy-manager": "^1.0"
+        "ocramius/proxy-manager": "^1.0",
+        "stecman/symfony-console-completion": "^0.7.0"
     },
     "suggest": {
         "ext-apcu": "*",
